# tree-sitter-traversal

./: Cargo.toml  README.md
.github/workflows/: pr.yml
benches/: traversal.rs
src/: lib.rs
