[package]
name = "baz-tree-sitter-traversal"
version = "0.1.4"
edition = "2021"
rust-version = "1.66" # MSRV

license = "MIT"
repository = "https://github.com/baz-scm/tree-sitter-traversal"
documentation = "https://docs.rs/tree-sitter-traversal/"
authors = ["Baz"]
readme = "README.md"

description = "Traversal of tree-sitter Trees and any arbitrary tree with a TreeCursor-like interface"

keywords = ["tree-sitter", "traverse", "traversal", "tree"]
categories = ["algorithms", "data-structures", "no-std"]

[lib]
name = "tree_sitter_traversal"

[package.metadata.release]
allow-branch = ["HEAD"]
push = false
tag = false

[dependencies]
tree-sitter = {version=">= 0.22", optional=true}

[dev-dependencies]
tree-sitter-rust = "0.21"
tree-sitter-cpp = "0.22"

[features]
default = ["tree-sitter"]
